[gd_scene load_steps=10 format=3 uid="uid://terrain123"]

[ext_resource type="Script" path="res://scripts/terrain_generator.gd" id="1_terrain"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_1"]
size = Vector2(128, 32)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_terrain"]
texture = SubResource("PlaceholderTexture2D_1")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:0/0/modulate = Color(0.3, 0.7, 0.3, 1)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:0/0/modulate = Color(0.5, 0.35, 0.2, 1)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:0/0/modulate = Color(0.4, 0.4, 0.45, 1)
3:0/0 = 0
3:0/0/modulate = Color(0.25, 0.2, 0.3, 1)

[sub_resource type="TileSet" id="TileSet_terrain"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 2
physics_layer_0/collision_mask = 1
sources/0 = SubResource("TileSetAtlasSource_terrain")

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_water"]
size = Vector2(32, 32)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_water"]
texture = SubResource("PlaceholderTexture2D_water")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_water"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 64
physics_layer_0/collision_mask = 0
sources/0 = SubResource("TileSetAtlasSource_water")

[sub_resource type="TileSet" id="TileSet_background"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_terrain")

[node name="TerrainGenerator" type="Node2D"]
script = ExtResource("1_terrain")

[node name="BackgroundTileMap" type="TileMapLayer" parent="."]
z_index = -2
modulate = Color(0.3, 0.25, 0.35, 0.5)
tile_set = SubResource("TileSet_background")

[node name="TerrainTileMap" type="TileMapLayer" parent="."]
tile_set = SubResource("TileSet_terrain")

[node name="WaterTileMap" type="TileMapLayer" parent="."]
z_index = 1
modulate = Color(0.2, 0.5, 0.9, 0.7)
tile_set = SubResource("TileSet_water")
